--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "homepage": "https://github.com/AnkitThakur0910/my-backend-app#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "expree": "^2.0.3"
+    "express": "^4.18.2"
   }
 }
